--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.12.0",
     "next": "14.2.3",
     "path-to-regexp": "^8.2.0",
     "react": "^18",
