--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "^5.12.0",
+    "@next/third-parties": "^15.4.6",
     "next": "14.2.3",
     "path-to-regexp": "^8.2.0",
     "react": "^18",
